tests/out/error/type/unknown.in.bt
// fun params
fun foo (y MyType) {

	// casting
	x := 1 as u7
}
